syntax = "proto3";

package erc20.types.v1;

message TransferEvents {
  repeated TransferEvent transfers = 1;
}

message TransferEvent {
  // contract address
  string address = 1;

  // event payload
  string from = 2;
  string to = 3;
  string value = 4;

  // trace information
  string transaction = 5;
  uint64 block_index = 6;
}
